Fix: Title icon spacing

--- a/src/styles/cardsStyle.css
+++ b/src/styles/cardsStyle.css
@@ -87,7 +87,7 @@
 
 .title-icon {
 	text-align: center;
-	flex: 2 0 52px;
+	flex: 2 0 30px;
 	display: flex;
 }
 
